unpackaged/objects/CIBIL_Score__mdt.object
<CustomObject>
    <fields>
        <fullName>AGGREGATOR_ID__c</fullName>
        <label>AGGREGATOR_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Request__c</fullName>
        <description>Acknowledgement_Request url</description>
        <label>Acknowledgement_Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTITUTION_ID__c</fullName>
        <label>INSTITUTION_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Request__c</fullName>
        <description>Issue_Request url</description>
        <label>Issue_Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEMBER_ID__c</fullName>
        <label>MEMBER_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASSWORD__c</fullName>
        <label>PASSWORD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CIBIL Score</label>
    <pluralLabel>CIBIL Scores</pluralLabel>
</CustomObject>